<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/filledIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/filled_small_icon"
        android:src="@drawable/job_finder_icon_filled"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>
    
    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/happyMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/i_m_happy_to_see_you_again"
        android:textColor="@color/grey"
        android:textSize="15sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/grey"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/splash_screen_background"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:text="@string/forget_password"/>

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="15dp"
        android:text="@string/sign_in"
        android:backgroundTint="@color/grey"
        app:cornerRadius="13dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/havingAccount"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/askAboutAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="60dp"
            android:textColor="@color/grey"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/splash_screen_background"
            android:textSize="15sp"/>

    </LinearLayout>






</LinearLayout>